# Local-search

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
results/: local_search_first_improvementTai100a.sol  local_search_first_improvementTai20a.sol  local_search_first_improvementTai40a.sol  local_search_first_improvementTai60a.sol  local_search_first_improvementTai80a.sol
results/iterated_local_search/: Tai100a.sol  Tai20a.sol  Tai40a.sol  Tai60a.sol  Tai80a.sol
results/local_search_first_improvement/: Tai100a.sol  Tai20a.sol  Tai40a.sol  Tai60a.sol  Tai80a.sol
src/: QAP.hpp  main.cpp
